# cppdevenv

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  sizeof.cpp
src/ebo/: CMakeLists.txt  main.cpp
src/sizeof/: CMakeLists.txt  main.cpp
src/version/: CMakeLists.txt  main.cpp  version.hpp.in
